# nautilus_account_console

./: .gitignore  AGENTS.md  README.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
backend/: pyproject.toml
backend/src/nautilus_account_console/: __init__.py  account_mirror.py  cli.py  command_actions.py  command_api.py  ctp025292_consistency.py  ctp19053_consistency.py  ledger.py  main.py  route_context.py  schemas.py  source_bridge.py
backend/tests/: test_account_mirror.py  test_adr0010_wi2_generated_artifact_retirement.py  test_adr0010_wi7_codegen_drift.py  test_api.py  test_command_api.py  test_ctp025292_consistency.py  test_ctp19053_consistency.py  test_mirror_api.py  test_nautilus_contracts_leaf_boundary.py  test_source_bridge.py
contracts/: account_event.schema.json  account_snapshot.schema.json  fill_event.schema.json  order_event.schema.json  report_msg.schema.json
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
hotpath-rs/: Cargo.toml
scripts/: build_ctp025292_source_package_from_real_login.py  build_ctp19053_source_package_from_real_login.py  build_ib_u3028269_source_package_from_tws_api.py  build_p019_u3028269_real_durable_store_reload.py  check_knowledge_docs.py  check_proposal_docs.py  collect_ib_u3028269_tws_api_snapshot.py  decide_p019_tws_reinstall_gate.py  diagnose_p019_tws_api_config.py  diagnose_p019_tws_api_socket.py  diagnose_p019_windows_firewall_tws_api.py  generate_account_contracts.py  prepare_ib_tws_u3028269_login_api_knowledge_backfill.py  (+112 more)
(+560 files in other folders)
